--- a/PillsPromise/Info.plist
+++ b/PillsPromise/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>NanumBarunpenR</string>
+		<string>NanumBarunpenB</string>
+	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>test</string>
 	<key>NSCameraUsageDescription</key>
